# PeakLogic

./: .env.example  .gitignore  ARCHITECTURE_AND_CODING_DESIGN.md  PROJECT_REQUIREMENTS.md  PROJECT_STATUS.md  README.md  api.py  pyproject.toml  render.yaml
docs/: ARCHITECTURE_AND_CODING_DESIGN.md  PROJECT_REQUIREMENTS.md  PROJECT_STATUS.md  architecture.md  forecast_model_upgrade_source_of_truth.md  mentoring_session_prep.md  requirements.md  status.md
docs/superpowers/plans/: 2026-05-04-direct-horizon-boosted-forecast.md  2026-05-04-forecast-error-diagnosis-alert-confirmation.md  2026-05-04-forecast-peak-alert-refinement.md  2026-05-05-lightgbm-quantile-md-redesign.md  2026-05-09-monthly-md-planning.md  2026-05-10-adaptive-p90-calibration.md  2026-05-10-backend-model-evidence.md  2026-05-10-md-risk-calibration.md  2026-05-10-monthly-probabilistic-planning.md  2026-05-10-react-fastapi-replacement.md  2026-05-11-optimization-assumptions-ui.md  (+3 more)
kinetic-precision/: .env.example  .gitignore  README.md  index.html  metadata.json  package-lock.json  package.json
kinetic-precision/src/: App.tsx  constants.ts  index.css
notebooks/model_upgrade_inspection/: README.md  __init__.py  forecast_model_upgrade_inspection.ipynb  forecast_model_upgrade_support.py
tests/: test_api.py  test_forecast_model_upgrade_notebook.py  test_forecast_model_upgrade_support.py  test_forecasting.py  test_ingestion.py  test_optimization.py  test_reporting.py
trex_energy/: __init__.py  assistant.py  forecasting.py  ingestion.py  optimization.py  profile.py  reporting.py  tariff.py  validation.py
(+49 files in other folders)
